[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Word.gd" type="Script" id=1]
[ext_resource path="res://sprites/LD51.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Word" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 40, 32, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Word_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Word_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
